# drf-homework

./: .env.sample  .gitignore  README.MD  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
courses/: admin.py  models.py  paginators.py  payment_modules.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options.py  0003_payment.py  0004_alter_lesson_video.py  0005_course_user_lesson_user.py  0006_sub.py  0007_payment_payment_url_payment_session_id.py  0008_alter_payment_session_id.py  0009_alter_payment_payment_url_alter_payment_session_id.py  0010_payment_last_update.py  0011_remove_payment_last_update_course_last_update.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py  0003_alter_user_options.py  0004_alter_user_last_login.py
